Improve sorting of Projects and Profiles in UI